# Icebar

./: 3  Cargo.toml  README.md  \  icebar-theme-switcher.sh  script.sh  shell.nix
.github/workflows/: rust_arch.yml  rust_aur.yml  rust_fedora.yml  rust_ubuntu.yml
example_themes/brutalist_concrete/: config.ron
example_themes/catppuccin/: config.ron
example_themes/catppuccin_side_bar/: config.ron
example_themes/default/: config.ron
example_themes/dracula/: config.ron
example_themes/everforest/: config.ron
example_themes/gothppuccin/: config.ron
example_themes/gruvbox/: config.ron
example_themes/monokoi/: config.ron
example_themes/nord/: config.ron
example_themes/one_dark/: config.ron
example_themes/oxocarbon/: config.ron
example_themes/rose_pine_dawn/: config.ron
src/: clock.rs  context_menu.rs  fs.rs  hypr.rs  main.rs  monitor.rs  popup.rs  ron.rs  subscription.rs  tray.rs  update.rs  view.rs  volume.rs  warning.rs
src/helpers/: color.rs  config_watcher.rs  font.rs  fs.rs  icons.rs  media_buttons.rs  misc.rs  mod.rs  monitor.rs  ron_general.rs  string.rs  style.rs  workspaces.rs
src/modules/: clock.rs  cpu.rs  cpu_temp.rs  custom_modules.rs  data.rs  disk.rs  focused_window.rs  hypr.rs  image.rs  media_player.rs  mod.rs  network.rs  niri.rs  ram.rs  sway.rs  tray.rs  volume.rs  workspaces.rs
themes/brutalist_concrete/: config.ron
themes/catppuccin/: config.ron
themes/catppuccin_side_bar/: config.ron
themes/default/: config.ron
themes/dracula/: config.ron
themes/everforest/: config.ron
themes/frutiger_aero/: config.ron
themes/gothppuccin/: config.ron
themes/gruvbox/: config.ron
themes/i3status_votex/: config.ron
themes/material_deep_ocean/: config.ron
themes/minimal_black/: config.ron
themes/monokoi/: config.ron
themes/neon_dystopia/: config.ron
themes/nord/: config.ron
themes/one_dark/: config.ron
themes/oxocarbon/: config.ron
themes/rose_pine_dawn/: config.ron
themes/sakura_terminal/: config.ron
themes/solarized/: config.ron
themes/tokyo_night/: config.ron
themes/votex/: config.ron
