[package]
name = "iced_wayland_topbar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.43"
dirs = "6.0.0"
futures = "0.3.32"
home = "0.5.12"
iced = { version = "0.14.0", features = ["canvas", "svg", "tokio", "image"] }
iced_layershell = "0.15.0"
iced_native = "0.10.3"
image = "0.25.9"
once_cell = "1.21.3"
resvg = "0.47.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tiny-skia = "0.12.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.18"
usvg = "0.47.0"
zbus = { version = "5.13.2", features = ["tokio"] }
