[package]
name = "IceBar"
version = "0.1.0"
edition = "2024"

[dependencies]
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
iced = { version = "0.14.0", features = ["canvas", "svg", "tokio", "image"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
zbus = { version = "5.13.2", features = ["tokio"] }
iced_layershell = "0.15.0"
tokio-stream = "0.1.18"
display-info = "0.5.7"
iced_native = "0.10.3"
serde_json = "1.0.149"
once_cell = "1.21.3"
tiny-skia = "0.12.0"
futures = "0.3.32"
chrono = "0.4.43"
image = "0.25.9"
resvg = "0.47.0"
home = "0.5.12"
usvg = "0.47.0"
ron = "0.12.0"
futures-util = "0.3.32"
